# Dev-toolkit

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: SHELL_COMPLETION.md
src/dev_toolkit/: __init__.py  cli.py
src/dev_toolkit/config/: __init__.py  defaults.py  logging_config.py
src/dev_toolkit/services/: __init__.py  base64_service.py  clipboard_service.py  file_service.py  hash_service.py  json_service.py  password_service.py  system_service.py  timestamp_service.py  url_service.py  uuid_service.py
tests/: test_base64_service.py  test_cli.py  test_clipboard_service.py  test_defaults.py  test_file_service.py  test_hash_service.py  test_json_service.py  test_password_service.py  test_system_service.py  test_timestamp_service.py  test_url_service.py  test_uuid_service.py
